// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Empty lobby 1`] = `
<div
  className="lobby"
>
  <div
    className="lobby-left"
  >
    <div
      className="room-list"
    >
      <div
        className="no-rooms-label"
      >
        No rooms available yet
      </div>
    </div>
  </div>
  <div
    className="lobby-right"
  >
    <div
      className="enter-name-form-container"
    >
      <div
        className="enter-name-form"
      >
        <div
          className="enter-name-label"
        >
          What's your name?
        </div>
        <input
          className="enter-name-input"
          maxLength="15"
          onChange={[Function]}
          onKeyPress={[Function]}
          placeholder="Enter name..."
          type="text"
          value=""
        />
        <button
          className="enter-name-button"
          onClick={[Function]}
        >
          Confirm
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Lobby with one player 1`] = `
<div
  className="lobby"
>
  <div
    className="lobby-left"
  >
    <div
      className="room-list"
    >
      <div
        className="no-rooms-label"
      >
        No rooms yet
      </div>
    </div>
  </div>
  <div
    className="lobby-right"
  >
    <div
      className="enter-name-form-container"
    >
      <div
        className="name-label"
      >
        Hi, Anna
      </div>
    </div>
    <div
      className="create-room-form"
    >
      <div
        className="create-room-label"
      >
        Create own room
      </div>
      <input
        className="create-room-input"
        maxLength="15"
        onChange={[Function]}
        onKeyPress={[Function]}
        placeholder="Enter name..."
        type="text"
        value=""
      />
      <button
        className="create-room-button"
        onClick={[Function]}
      >
        Create
      </button>
    </div>
    <div
      className="lobby-people"
    >
      <div
        className="lobby-people-label"
      >
        Players
      </div>
      <div
        className="lobby-people-list"
      >
        <div
          className="lobby-person-name"
          style={
            Object {
              "color": "#f9f9f9",
            }
          }
        >
          Anna - 0
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Lobby with two players 1`] = `
<div
  className="lobby"
>
  <div
    className="lobby-left"
  >
    <div
      className="room-list"
    >
      <div
        className="no-rooms-label"
      >
        No rooms yet
      </div>
    </div>
  </div>
  <div
    className="lobby-right"
  >
    <div
      className="enter-name-form-container"
    >
      <div
        className="name-label"
      >
        Hi, Anna
      </div>
    </div>
    <div
      className="create-room-form"
    >
      <div
        className="create-room-label"
      >
        Create own room
      </div>
      <input
        className="create-room-input"
        maxLength="15"
        onChange={[Function]}
        onKeyPress={[Function]}
        placeholder="Enter name..."
        type="text"
        value=""
      />
      <button
        className="create-room-button"
        onClick={[Function]}
      >
        Create
      </button>
    </div>
    <div
      className="lobby-people"
    >
      <div
        className="lobby-people-label"
      >
        Players
      </div>
      <div
        className="lobby-people-list"
      >
        <div
          className="lobby-person-name"
          style={
            Object {
              "color": "#f9f9f9",
            }
          }
        >
          Anna - 0
        </div>
        <div
          className="lobby-person-name"
          style={
            Object {
              "color": "#f9f9f9",
            }
          }
        >
          Olya - 0
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Lobby with two players and one roon ready for joining 1`] = `
<div
  className="lobby"
>
  <div
    className="lobby-left"
  >
    <div
      className="room-list"
    >
      <div
        className="room-item"
      >
        <div
          className="room-name"
        >
          Room
        </div>
        <div
          className="room-actions"
        >
          <button
            className="join-room-button"
            onClick={[Function]}
          >
            Join
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="lobby-right"
  >
    <div
      className="enter-name-form-container"
    >
      <div
        className="name-label"
      >
        Hi, Anna
      </div>
    </div>
    <div
      className="create-room-form"
    >
      <div
        className="create-room-label"
      >
        Create own room
      </div>
      <input
        className="create-room-input"
        maxLength="15"
        onChange={[Function]}
        onKeyPress={[Function]}
        placeholder="Enter name..."
        type="text"
        value=""
      />
      <button
        className="create-room-button"
        onClick={[Function]}
      >
        Create
      </button>
    </div>
    <div
      className="lobby-people"
    >
      <div
        className="lobby-people-label"
      >
        Players
      </div>
      <div
        className="lobby-people-list"
      >
        <div
          className="lobby-person-name"
          style={
            Object {
              "color": "#f9f9f9",
            }
          }
        >
          Anna - 0
        </div>
        <div
          className="lobby-person-name"
          style={
            Object {
              "color": "#f9f9f9",
            }
          }
        >
          Olya - 0
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Lobby with two players and one roon with game on 1`] = `
<div
  className="lobby"
>
  <div
    className="lobby-left"
  >
    <div
      className="room-list"
    >
      <div
        className="room-item"
      >
        <div
          className="room-name"
        >
          Room
        </div>
        <div
          className="room-actions"
        >
          <div
            className="game-in-progress-label"
          >
            Game on...
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="lobby-right"
  >
    <div
      className="enter-name-form-container"
    >
      <div
        className="name-label"
      >
        Hi, Anna
      </div>
    </div>
    <div
      className="create-room-form"
    >
      <div
        className="create-room-label"
      >
        Create own room
      </div>
      <input
        className="create-room-input"
        maxLength="15"
        onChange={[Function]}
        onKeyPress={[Function]}
        placeholder="Enter name..."
        type="text"
        value=""
      />
      <button
        className="create-room-button"
        onClick={[Function]}
      >
        Create
      </button>
    </div>
    <div
      className="lobby-people"
    >
      <div
        className="lobby-people-label"
      >
        Players
      </div>
      <div
        className="lobby-people-list"
      >
        <div
          className="lobby-person-name"
          style={
            Object {
              "color": "#f9f9f9",
            }
          }
        >
          Anna - 0
        </div>
        <div
          className="lobby-person-name"
          style={
            Object {
              "color": "#f9f9f9",
            }
          }
        >
          Olya - 0
        </div>
      </div>
    </div>
  </div>
</div>
`;
